# ChangeLog for dev-php/adodb
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/adodb/ChangeLog,v 1.45 2005/12/17 21:42:56 corsair Exp $

  17 Dec 2005; Markus Rothe <corsair@gentoo.org> adodb-4.65-r1.ebuild:
  Added ~ppc64

  24 Nov 2005; Luca Longinotti <chtekk@gentoo.org> adodb-4.65-r1.ebuild:
  New-style PHP should use dodoc-php, see
  http://svn.gnqs.org/projects/gentoo-php-overlay/wiki/GuidingPrinciples.

  22 Nov 2005; Joseph Jezak <josejx@gentoo.org> adodb-4.65-r1.ebuild:
  Marked ~ppc for bug #106514.

  24 Sep 2005; Marcus D. Hanwell <cryos@gentoo.org> adodb-4.65-r1.ebuild:
  Marked ~amd64, bug 106514.

*adodb-4.65-r1 (18 Sep 2005)

  18 Sep 2005; Benedikt Boehm <hollow@gentoo.org> +adodb-4.65-r1.ebuild:
  Version bump

  17 Sep 2005; Michael Hanselmann <hansmi@gentoo.org> adodb-4.65.ebuild:
  Stable on ppc.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> adodb-4.65.ebuild:
  Mark 4.65 stable on ia64

  13 Sep 2005; Aron Griffis <agriffis@gentoo.org> adodb-4.65.ebuild:
  Mark 4.65 stable on alpha

  13 Sep 2005; Jay Pfeifer <pfeifer@gentoo.org> adodb-4.65.ebuild:
  Mark stable on x86.

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> adodb-4.64.ebuild:
  Mark 4.64 stable on alpha

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> adodb-4.64.ebuild:
  stable on ia64

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> adodb-4.64.ebuild:
  Stable on ppc.

*adodb-4.65 (22 Jul 2005)

  22 Jul 2005; Jay Pfeifer <pfeifer@gentoo.org> -adodb-4.63.ebuild,
  adodb-4.64.ebuild, +adodb-4.65.ebuild:
  Version bump.
  Remove version 4.63.
  Bump 4.64 stable on x86.

*adodb-4.64 (23 Jun 2005)

  23 Jun 2005; Jay Pfeifer <pfeifer@gentoo.org> +adodb-4.64.ebuild:
  Version bump.

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> adodb-4.62.ebuild:
  Stable on ppc.

*adodb-4.63 (17 May 2005)

  17 May 2005; Jay Pfeifer <pfeifer@gentoo.org> -adodb-4.0.5.ebuild,