@@ -1,12 +1,12 @@
-MD5 0489844a2befbac5eaf79a4c7692df2d ChangeLog 5244
+MD5 efca5c8e496abf28d91ec1557ee9d1c3 ChangeLog 5552
 MD5 bc2a3258f115652a02ff4d7d5c71e67b adodb-4.55.ebuild 892
 MD5 5f59f207c056ae590e39bbba55aea539 adodb-4.62.ebuild 896
 MD5 3dbee3340fbc3b77fb8a51a2b9566b6a adodb-4.64.ebuild 896
-MD5 c58d07ca1c1235bbad9bccaec96fc062 metadata.xml 157
 MD5 813afe901227dc593e795ce8a4ef9463 adodb-4.65.ebuild 894
-MD5 0184e2b61c76ac42d86f04292c5d8b2a adodb-4.65-r1.ebuild 884
+MD5 0d098fb707375c284aefef59430978c2 adodb-4.68.ebuild 884
 MD5 d04965ec2fb4134b68d543e6b0aafc68 files/digest-adodb-4.55 57
 MD5 c0f598ddb2f309f4f26ece61aed56147 files/digest-adodb-4.62 57
-MD5 e85ebe955e928f96372c229434973b4b files/digest-adodb-4.65 57
 MD5 641a7d410497c3080d2dbb2833d8c2cd files/digest-adodb-4.64 57
-MD5 e85ebe955e928f96372c229434973b4b files/digest-adodb-4.65-r1 57
+MD5 e85ebe955e928f96372c229434973b4b files/digest-adodb-4.65 57
+MD5 ce73605417e336a245ab73510ff07435 files/digest-adodb-4.68 57
+MD5 c58d07ca1c1235bbad9bccaec96fc062 metadata.xml 157
